name:                pandoc-live
version:             1.0.0
synopsis:            Automatically refresh Pandoc documents in your web browser
homepage:            http://github.com/ocharles/pandoc-live
license:             BSD3
license-file:        LICENSE
author:              Oliver Charles
maintainer:          ollie@ocharles.org.uk
copyright:           Oliver Charles 2014
category:            Text
build-type:          Simple
cabal-version:       >=1.10

data-files: index.html

executable pandoc-live
  main-is:             Main.hs
  other-extensions:    OverloadedStrings
  build-depends:       base >=4.7 && <4.8, text >=1.1 && <1.2, transformers >=0.3 && <0.4, enumerator >=0.4 && <0.5, blaze-builder >=0.3 && <0.4, async >=2.0 && <2.1, pandoc >=1.13 && <1.14, linux-inotify >=0.2 && <0.3, snap-core >=0.9 && <0.10, snap-server >=0.9 && <0.10, stm >=2.4 && <2.5
  default-language:    Haskell2010