name:                pandoc-live
version:             1.0.0
synopsis:            Automatically refresh Pandoc documents in your web browser
homepage:            http://github.com/ocharles/pandoc-live
license:             BSD3
license-file:        LICENSE
author:              Oliver Charles
maintainer:          ollie@ocharles.org.uk
copyright:           Oliver Charles 2014
category:            Text
build-type:          Simple
cabal-version:       >=1.10

data-files:
  index.html
  bundle.js

executable pandoc-live
  main-is:             Main.hs
  other-extensions:    OverloadedStrings
  build-depends:       base >=4.7, text >=1.1, transformers >=0.3, enumerator >=0.4, blaze-builder >=0.3, async >=2.0, pandoc >=1.13, linux-inotify >=0.2, snap-core >=0.9, snap-server >=0.9, stm >=2.4
  default-language:    Haskell2010
